--- a/exemplos/flex-container.html
+++ b/exemplos/flex-container.html
@@ -9,11 +9,21 @@
         .flex{
             max-width: 300px;
             padding: 10px;
-            border: 2px;
+            border: 2px solid black;
+            display: flex;
+        }
+
+        .item{
+            background-color: aqua;
+            margin: 5px;
         }
     </style>
 </head>
 <body>
-    
+    <div class="flex">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+    </div>
 </body>
 </html>
