Exemplos práticos das aulas

--- a/exemplos/flex-wrap.html
+++ b/exemplos/flex-wrap.html
@@ -62,5 +62,13 @@
         <div class="item green">03</div>
         <div class="item orange">04</div>
     </div>
+
+    <h1>wrap-reverse</h1>
+    <div class="flex-container wrap-reverse">
+        <div class="item blue">01</div>
+        <div class="item orange">02</div>
+        <div class="item green">03</div>
+        <div class="item orange">04</div>
+    </div>
 </body>
 </html>
