--- a/exemplos/justify-content.html
+++ b/exemplos/justify-content.html
@@ -6,10 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos - Justify Content</title>
     <style>
-        
+        .container{
+            max-width: 400px;
+            border: 1px solid black;
+            margin: 0;
+            margin-bottom: 10px;
+            display: flex;
+        }
+
+        .item{
+            background-color: blueviolet;
+            margin: 5px;
+            text-align: center;
+            color: white;
+        }
+
+        .flex-start{
+            justify-content: flex-start;
+        }
+
+        .flex-end{
+            justify-content: flex-end;
+        }
     </style>
 </head>
 <body>
-    
+    <h1>flex-start</h1>
+    <section class="container flex-start">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
+
+    <h1>flex-end</h1>
+    <section class="container flex-end">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
 </body>
 </html>
