--- a/exemplos/justify-content.html
+++ b/exemplos/justify-content.html
@@ -28,6 +28,15 @@
         .flex-end{
             justify-content: flex-end;
         }
+
+        .center{
+            justify-content: center;
+        }
+
+        .space-between{
+            justify-content: space-between;
+        }
+
     </style>
 </head>
 <body>
@@ -43,6 +52,20 @@
         <div class="item">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
+    </section>
+
+    <h1>center</h1>
+    <section class="container center">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
+
+    <h1>space-between</h1>
+    <section class="container space-between">
+        <div class="item">111</div>
+        <div class="item">222</div>
+        <div class="item">333</div>
     </section>
 </body>
 </html>
