--- a/exemplos/align-items.html
+++ b/exemplos/align-items.html
@@ -27,6 +27,14 @@
         .stretch{
             align-items: stretch;
         }
+
+        .flex-start{
+            align-items: flex-start;
+        }
+
+        .flex-end{
+            align-items: flex-end;
+        }
     </style>
 </head>
 <body>
@@ -45,6 +53,32 @@
 
     <h1>stretch</h1>
     <section class="container stretch">
+        <div class="item">
+            Lorem ipsum dolor sit amet.
+        </div>
+        <div class="item">
+            Lorem, ipsum dolor.
+        </div>
+        <div class="item">
+            Lorem ipsum dolor sit amet consectetur.
+        </div>
+    </section>
+
+    <h1>flex-start</h1>
+    <section class="container flex-start">
+        <div class="item">
+            Lorem ipsum dolor sit amet.
+        </div>
+        <div class="item">
+            Lorem, ipsum dolor.
+        </div>
+        <div class="item">
+            Lorem ipsum dolor sit amet consectetur.
+        </div>
+    </section>
+
+    <h1>flex-end</h1>
+    <section class="container flex-end">
         <div class="item">
             Lorem ipsum dolor sit amet.
         </div>
