--- a/exemplos/align-items.html
+++ b/exemplos/align-items.html
@@ -35,6 +35,10 @@
         .flex-end{
             align-items: flex-end;
         }
+
+        .baseline{
+            align-items: baseline;
+        }
     </style>
 </head>
 <body>
@@ -84,6 +88,20 @@
         </div>
         <div class="item">
             Lorem, ipsum dolor.
+        </div>
+        <div class="item">
+            Lorem ipsum dolor sit amet consectetur.
+        </div>
+    </section>
+
+    <h1>baseline</h1>
+    <section class="container baseline">
+        <div class="item">
+            Lorem ipsum dolor sit amet.
+        </div>
+        <div class="item">
+            Lorem, ipsum dolor.
+            Lorem ipsum dolor sit amet consectetur.
         </div>
         <div class="item">
             Lorem ipsum dolor sit amet consectetur.
