--- a/exemplos/flex-basis.html
+++ b/exemplos/flex-basis.html
@@ -7,15 +7,50 @@
     <title>Fundamentos - Flex Basis</title>
     <style>
         .flex-container{
-
+            max-width: 300px;
+            border: 1px solid black;
+            display: flex;
         }
 
-        .item{
-            
+        .items{
+            background-color: coral;
+            color: white;
+            text-align: center;
+            margin: 5px;
+        }
+
+        .bauto{
+            flex-basis: auto;
+        }
+
+        .b-0{
+            flex-basis: 0;
+        }
+
+        .fg-1{
+            flex-grow: 1;
+        }
+
+        .fg-2{
+            flex-grow: 2;
         }
     </style>
 </head>
 <body>
-    
+    <h1>auto</h1>
+    <div class="flex-container">
+        <div class="items bauto fg-1">A</div>
+        <div class="items bauto fg-1">BBB</div>
+        <div class="items bauto fg-1">C</div>
+        <div class="items bauto fg-2">DEF</div>
+    </div>
+
+    <h1>0 (zero)</h1>
+    <div class="flex-container">
+        <div class="items b-0 fg-1">A</div>
+        <div class="items b-0 fg-1">BBB</div>
+        <div class="items b-0 fg-1">C</div>
+        <div class="items b-0 fg-1">DEF</div>
+    </div
 </body>
 </html>
