--- a/exemplos/flex-basis.html
+++ b/exemplos/flex-basis.html
@@ -7,7 +7,7 @@
     <title>Fundamentos - Flex Basis</title>
     <style>
         .flex-container{
-            max-width: 300px;
+            max-width: 500px;
             border: 1px solid black;
             display: flex;
         }
@@ -27,12 +27,20 @@
             flex-basis: 0;
         }
 
+        .fg-0{
+            flex-grow: 0;
+        }
+
         .fg-1{
             flex-grow: 1;
         }
 
         .fg-2{
             flex-grow: 2;
+        }
+
+        .w100{
+            flex-basis: 100px;
         }
     </style>
 </head>
@@ -51,6 +59,14 @@
         <div class="items b-0 fg-1">BBB</div>
         <div class="items b-0 fg-1">C</div>
         <div class="items b-0 fg-1">DEF</div>
-    </div
+    </div>
+
+    <h1>basis + width</h1>
+    <div class="flex-container">
+        <div class="items w100 fg-0">A</div>
+        <div class="items w100 fg-0">BBB</div>
+        <div class="items w100 fg-0">C</div>
+        <div class="items w100 fg-0">DEF</div>
+    </div>
 </body>
 </html>
