Exemplos das aulas

--- a/exemplos/flex-shrink.html
+++ b/exemplos/flex-shrink.html
@@ -7,15 +7,26 @@
     <title>Fundamentos - Flex Shrink</title>
     <style>
         .flex-container{
-
+            display: flex;
+            border: 1px solid black;
+            max-width: 350px;
         }
 
         .items{
-            
+            margin: 5px;
+            background-color: orange;
+            color: aliceblue;
+            font-size: 24px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="items">A</div>
+        <div class="items">B</div>
+        <div class="items">C</div>
+        <div class="items">D</div>
+    </div>
 </body>
 </html>
