--- a/exemplos/flex-shrink.html
+++ b/exemplos/flex-shrink.html
@@ -10,6 +10,7 @@
             display: flex;
             border: 1px solid black;
             max-width: 350px;
+            margin-bottom: 5px;
         }
 
         .items{
@@ -19,14 +20,45 @@
             font-size: 24px;
             text-align: center;
         }
+
+        .s-0{
+            flex-shrink: 0;
+            flex-basis: 100px;
+        }
+
+        .s-1{
+            flex-shrink: 1;
+        }
+
+        .fg-1{
+            flex-grow: 1;
+        }
     </style>
 </head>
 <body>
+    <h1>Flex-Shrink: 1</h1>
     <div class="flex-container">
-        <div class="items">A</div>
-        <div class="items">B</div>
-        <div class="items">C</div>
-        <div class="items">D</div>
+        <div class="items fg-1 s-1">A</div>
+        <div class="items fg-1 s-1">B</div>
+        <div class="items fg-1 s-1">C</div>
+        <div class="items fg-1 s-1">D</div>
+        <div class="items fg-1 s-1">E</div>
+    </div>
+
+    <div class="flex-container">
+        <div class="items fg-1 s-1">A</div>
+        <div class="items fg-1 s-1">Lorem ipsum dolor sit</div>
+        <div class="items fg-1 s-1">C</div>
+        <div class="items fg-1 s-1">D</div>
+    </div>
+
+    <h1>Flex-Shrink: 0 + basis: 100px</h1>
+    <div class="flex-container">
+        <div class="items fg-1 s-0">A</div>
+        <div class="items fg-1 s-0">B</div>
+        <div class="items fg-1 s-0">C</div>
+        <div class="items fg-1 s-0">D</div>
+        <div class="items fg-1 s-0">E</div>
     </div>
 </body>
 </html>
