--- a/exemplos/flex-shrink.html
+++ b/exemplos/flex-shrink.html
@@ -30,6 +30,14 @@
             flex-shrink: 1;
         }
 
+        .s-2{
+            flex-shrink: 2;
+        }
+
+        .s-3{
+            flex-shrink: 3;
+        }
+
         .fg-1{
             flex-grow: 1;
         }
@@ -59,6 +67,15 @@
         <div class="items fg-1 s-0">C</div>
         <div class="items fg-1 s-0">D</div>
         <div class="items fg-1 s-0">E</div>
+    </div>
+
+    <h1>Flex-Shrink: mix + basis: 100px</h1>
+    <div class="flex-container">
+        <div class="items fg-1 s-0">A</div>
+        <div class="items fg-1 s-2">B</div>
+        <div class="items fg-1 s-0">C</div>
+        <div class="items fg-1 s-3">D</div>
+        <div class="items fg-1 s-1">E</div>
     </div>
 </body>
 </html>
