--- a/exemplos/align-self.html
+++ b/exemplos/align-self.html
@@ -13,22 +13,56 @@
             margin-bottom: 20px;
         }
 
+        .align-container{
+            align-items: center;
+        }
+
         .items{
-            flex: 1;
             margin: 5px;
             background-color: paleturquoise;
             color: purple;
             font-size: 24px;
             text-align: center;
         }
+
+        .center{
+            align-self: center;
+        }
+
+        .flex-start{
+            align-self: flex-start;
+        }
+
+        .flex-end{
+            align-self: flex-end;
+        }
+
+        .stretch{
+            align-self: stretch;
+        }
+
+        .baseline{
+            align-self: baseline;
+        }
+
+        .auto{
+            align-self: auto;
+        }
     </style>
 </head>
 <body>
-    <div class="flex-container">
-        <div class="items">A</div>
-        <div class="items">B</div>
-        <div class="items">C</div>
-        <div class="items">D</div>
+    <div class="flex-container align-container">
+        <div class="items auto">A</div>
+        <div class="items auto">BBBB</div>
+        <div class="items auto">Lorem ipsum dolor sit amet consectetur.</div>
+        <div class="items auto">DEEEEEE</div>
+    </div>
+
+    <div class="flex-container align-container">
+        <div class="items stretch">A</div>
+        <div class="items flex-start">BBBB</div>
+        <div class="items auto">Lorem ipsum dolor sit amet consectetur.</div>
+        <div class="items flex-end">DEEEEEE</div>
     </div>
 </body>
 </html>
