Projeto integrador do curso

--- a/projeto_integrador/index.html
+++ b/projeto_integrador/index.html
@@ -41,36 +41,34 @@
         </div>
     </div>
 
-    <div class="flex-container">
-        <div>
+    <div class="container-externo">
+        <div class="flex-container" id="servicos">
             <h2>Serviços</h2>
-        </div>
+            <div class="list-servicos">
+                <div class="item-servico">
+                    <div><img src="./images/icon-2.png" alt="hospedagens"></div>
+                    <p>Hospedagens</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
 
-        <div>
-            <div>
-                <div><img src="./images/icon-2.png" alt="hospedagens"></div>
-                <p>Hospedagens</p>
-                <a href="#">Comprar Agora</a>
+                <div class="item-servico">
+                    <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
+                    <p>Pacotes de viagens</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
+
+                <div class="item-servico">
+                    <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
+                    <p>Roteiros personalizados</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
             </div>
-
-            <div>
-               <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
-               <p>Pacotes de viagens</p>
-               <a href="#">Comprar Agora</a>
-            </div>
-
-            <div>
-                <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
-                <p>Roteiros personalizados</p>
-                <a href="#">Comprar Agora</a>
-            </div>
-
         </div>
     </div>
 
-    <div class="flex-container">
+    <div class="flex-container" id="planos">
 
-        <div>
+        <div class="item-plano">
             <h3>Plano 2</h3>
             <ul>
                 <li>Suporte 24h</li>
@@ -80,7 +78,7 @@
             <a href="#">Saiba Mais!</a>
         </div>
 
-        <div>
+        <div class="item-plano"></div>>
             <h3>Plano 2</h3>
             <ul>
                 <li>Suporte 24h</li>
@@ -92,7 +90,7 @@
             <a href="#">Saiba Mais!</a>
         </div>
 
-        <div>
+        <div class="item-plano"></div>>
             <h3>Plano 3</h3>
             <ul>
                 <li>Suporte 24h</li>
