--- a/projeto_integrador/index.html
+++ b/projeto_integrador/index.html
@@ -67,41 +67,45 @@
     </div>
 
     <div class="flex-container" id="planos">
-
-        <div class="item-plano">
-            <h3>Plano 2</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
+        <div>
+            <h2>Planos</h2>
         </div>
-
-        <div class="item-plano"></div>>
-            <h3>Plano 2</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-                <li>Roteiro de trilhas</li>
-                <li>Serviço personalizado</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
-        </div>
-
-        <div class="item-plano"></div>>
-            <h3>Plano 3</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-                <li>Roteiro de trilhas</li>
-                <li>Serviço personalizado</li>
-                <li>Área Vip</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
-        </div>
+            <div class="list-planos">
+                <div class="item-plano">
+                    <h3>Plano 1</h3>
+                    <ul>
+                        <li>Suporte 24h</li>
+                        <li>Serviços de quarto</li>
+                        <li>Guia turístico</li>
+                    </ul>
+                    <a href="#">Saiba Mais!</a>
+                </div>
+        
+                <div class="item-plano">
+                    <h3>Plano 2</h3>
+                    <ul>
+                        <li>Suporte 24h</li>
+                        <li>Serviços de quarto</li>
+                        <li>Guia turístico</li>
+                        <li>Roteiro de trilhas</li>
+                        <li>Serviço personalizado</li>
+                    </ul>
+                    <a href="#">Saiba Mais!</a>
+                </div>
+        
+                <div class="item-plano">
+                    <h3>Plano 3</h3>
+                    <ul>
+                        <li>Suporte 24h</li>
+                        <li>Serviços de quarto</li>
+                        <li>Guia turístico</li>
+                        <li>Roteiro de trilhas</li>
+                        <li>Serviço personalizado</li>
+                        <li>Área Vip</li>
+                    </ul>
+                    <a href="#">Saiba Mais!</a>
+                </div>
+            </div>
     </div>
 
     <footer>
