--- a/projeto_integrador/index.html
+++ b/projeto_integrador/index.html
@@ -22,7 +22,7 @@
         <div class="texto-apresentacao">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <a href="" class="btn">Saiba Mais!</a>
         </div>
 
         <div>
@@ -78,7 +78,7 @@
                         <li>Serviços de quarto</li>
                         <li>Guia turístico</li>
                     </ul>
-                    <a href="#">Saiba Mais!</a>
+                    <a href="#" class="btn">Saiba Mais!</a>
                 </div>
         
                 <div class="item-plano">
@@ -90,7 +90,7 @@
                         <li>Roteiro de trilhas</li>
                         <li>Serviço personalizado</li>
                     </ul>
-                    <a href="#">Saiba Mais!</a>
+                    <a href="#" class="btn">Saiba Mais!</a>
                 </div>
         
                 <div class="item-plano">
@@ -103,7 +103,7 @@
                         <li>Serviço personalizado</li>
                         <li>Área Vip</li>
                     </ul>
-                    <a href="#">Saiba Mais!</a>
+                    <a href="#" class="btn">Saiba Mais!</a>
                 </div>
             </div>
     </div>
