Projeto integrador do curso

--- a/exemplos/align-items.html
+++ b/exemplos/align-items.html
@@ -52,6 +52,7 @@
         .central .item{
             flex: 0;
             padding: 20px;
+            flex-direction: ;
         }
     </style>
 </head>
