--- a/projeto_integrador/index.html
+++ b/projeto_integrador/index.html
@@ -83,18 +83,20 @@
         
                 <div class="item-plano">
                     <h3>Plano 2</h3>
+                    <br>
                     <ul>
                         <li>Suporte 24h</li>
                         <li>Serviços de quarto</li>
                         <li>Guia turístico</li>
                         <li>Roteiro de trilhas</li>
-                        <li>Serviço personalizado</li>
+                        <!-- <li>Serviço personalizado</li> -->
                     </ul>
                     <a href="#" class="btn">Saiba Mais!</a>
                 </div>
         
                 <div class="item-plano">
                     <h3>Plano 3</h3>
+                    <br>
                     <ul>
                         <li>Suporte 24h</li>
                         <li>Serviços de quarto</li>
@@ -109,8 +111,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+        <div class="flex-container footer">
+            <p>&copy; 2021 CSS Flexbox</p>
+            <p>Desenvolvido por: Karen Santos &copy; Digital Innovation One</p>
+        </div>
     </footer>
 </body>
 </html>
